2009-07-19  Geoff Simmons <gsimmons@gsimmons.org>

	* ser2net.conf: Some documentation cleanup, added missing docs
	for the timeout parameter.

	* README - Minor doc cleanup.
	
2009-07-15  Corey Minyard <minyard@acm.org>

	* configure.in: Move to version 2.6.
	
2009-06-30  Corey Minyard <minyard@acm.org>

	* dataxfer.c, devcfg.c, devcfg.h, readconfig.h, utils.h: Add the
	a TRACEFILE option to trace all I/O to a file., and separate
	out the defconfig into a separate structure to avoid passing a
	boatload of things to the config.
	
2009-06-30  Sebastian Andrzej Siewior <bigeasy@linutronix.de>

	* controller.c: Fix use after free in controller

          The controller will use its dynamically allocated data after it
	  got free() in error path. What we see in syslog is:

          Jun 30 10:26:38 consrv3 ser2net[3073]: read error for
		controller port: Connection reset by peer
          Jun 30 10:26:39 consrv3 ser2net[3073]: The tcp write for
		controller had error: Bad file descriptor

          The first error is "legal" because the destitnation decided to
	  close its socket a little to early than expected. The second
	  error is allready bad because it tries to use allready
	  deallocated fd. Later we segfault.

2007-11-16  Corey Minyard <minyard@acm.org>

	* configure.in: Move to version 2.5.

2007-11-16  Harry Flick, Corey Minyard <minyard@acm.org>

	* devcfg.c, devcfg.h, dataxfer.c, ser2net.conf, ser2net.8: Allow a
	"NOBREAK" option to disable automatically messing with the break
	operations on the serial port.  Useful for systems with a broken
	break.

2007-11-16  Robert Edmonds <edmonds@debian.org>,Corey Minyard <minyard@acm.org>
	
	* ser2net.c, ser2net.8: Add a '-P' option to specific that a
	pidfile be created.

2007-05-03  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Change the rfc2217 signature response code
	from 0 to 100.  Best guess on what this should be, as the
	RFC doesn't give the correct value and says "text".
