@@ -227,6 +227,7 @@ find_tracefile(char *name)
 	    return tracefile->str;
 	tracefile = tracefile->next;
     }
+    syslog(LOG_ERR, "Tracefile %s not found", name);
     return NULL;
 }
 
