@@ -49,6 +49,10 @@
 #            may also be specified, that banner will be printed
 #            for the line.  If no banner is given, then no
 #            banner is printed.
+#            The tw, tr, and tb options take a tracefile name (
+#            specified in TRACEFILE that will take all traced data.
+#            tw is data written to the device, tr is data read from
+#            the device, and tb is both.
 #
 # or...
 
@@ -61,6 +65,11 @@
 #    parameters (eg 9600N81).  Banners can span lines if the last
 #    character on a line is '\'.  Note that you *must* use \r\n to
 #    start a new line.
+#
+#  TRACEFILE:<name>:filename
+#    This specifies a filename to trace output into, as tw:/tmp/trace1.
+#    This takes a large number of escape sequences, see the man page
+#    for details on these options.
 #
 # Note that the same device can be listed multiple times under different
 # ports, this allows the same serial port to have both telnet and raw
@@ -76,13 +85,16 @@ third line\r\n
 
 BANNER:banner3:this is ser2net TCP port \p device \d  serial parms \s\r\n
 
+TRACEFILE:tw1:/tmp/tw-\p-\Y-\M-\D-\H:\i:\s.\U
+TRACEFILE:tr1:/tmp/tr-\p-\Y-\M-\D-\H:\i:\s.\U
+
 2001:raw:600:/dev/ttyS0:9600 NONE 1STOPBIT 8DATABITS XONXOFF LOCAL -RTSCTS
 #2002:raw:600:/dev/ttyS1:9600 NONE 1STOPBIT 8DATABITS XONXOFF LOCAL -RTSCTS
 2003:raw:5:/dev/ttyS2:9600
 2004:raw:5:/dev/ttyS3:115200
 2005:raw:5:/dev/ttyS4:9600
 2006:raw:5:/dev/ttyS5:9600
-2007:raw:5:/dev/ttyS6:9600
+2007:raw:5:/dev/ttyS6:9600 tw:tw1 tr:tr1
 3001:telnet:0:/dev/ttyS0:19200 remctl banner1
 3011:telnet:3:/dev/ttyS0:19200 banner2
 #3002:telnet:0:/dev/ttyS1:9600
